force-app/main/default/objects/Test_Cycle__c/Test_Cycle__c.object-meta.xml
<CustomObject>
    <label>Test Cycle</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Cycle No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cycles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>