force-app/main/default/objects/Test_Cycle__c/fields/Actual_Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pass_Rate__c</fullName>
    <formula>IF(
  AND(
    NOT(ISNULL(Num_of_Tests_Passed__c)),
    Num_of_Tests_Passed__c != 0,
    NOT(ISNULL(Num_of_Test_Runs__c)),
    Num_of_Test_Runs__c != 0
  ), Num_of_Tests_Passed__c / Num_of_Test_Runs__c, 
  0
)</formula>
    <inlineHelpText>Of the tests that have been executed for this Test Cycle, what is the percentage of tests that have passed?</inlineHelpText>
    <label>Actual Pass Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>