force-app/main/default/objects/Test_Cycle__c/fields/Actual_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Run_Rate__c</fullName>
    <formula>IF(
  OR(
    Num_of_Test_Runs__c = null,
    Num_of_Test_Runs__c = 0,
    Total_Test_Scenarios__c = null,
    Total_Test_Scenarios__c = 0
  ), 0,
  Num_of_Test_Runs__c / Total_Test_Scenarios__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Of the total runs for this Test Cycle, what percentage of them have been executed?</inlineHelpText>
    <label>Actual Run Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>