force-app/main/default/objects/Test_Cycle__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Test Cycles</relationshipLabel>
    <relationshipName>Test_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>