force-app/main/default/objects/Test_Cycle__c/fields/Num_of_Test_Runs__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Test_Runs__c</fullName>
    <description>Roll-up summary of Test Runs that have been executed</description>
    <inlineHelpText>Number of Test Runs executed</inlineHelpText>
    <label># of Test Runs</label>
    <summarizedField>Test_Scenario__c.Runs_Executed__c</summarizedField>
    <summaryForeignKey>Test_Scenario__c.Test_Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>