force-app/main/default/objects/Test_Cycle__c/fields/Num_of_Tests_Passed__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Tests_Passed__c</fullName>
    <description>Roll-up summary of child Test Runs with a pass result</description>
    <inlineHelpText>Number of Test Runs with a pass result</inlineHelpText>
    <label># of Tests Passed</label>
    <summarizedField>Test_Scenario__c.Times_Passed__c</summarizedField>
    <summaryForeignKey>Test_Scenario__c.Test_Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>