force-app/main/default/objects/Test_Cycle__c/fields/Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Rate__c</fullName>
    <description>Pass Rate percent from Test Plan - set manually</description>
    <formula>Test_Plan__r.Pass_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What is the mandatory pass rate in order to call the testing complete?</inlineHelpText>
    <label>Pass Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>