force-app/main/default/objects/Test_Cycle__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>HYPERLINK(
  &#39;/&#39;&amp; Test_Plan__r.Project__c,
  Test_Plan__r.Project__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>