force-app/main/default/objects/Test_Cycle__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <formula>HYPERLINK(
  &#39;/&#39;&amp; Test_Plan__r.Release__c,
  Test_Plan__r.Release__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release</label>
    <type>Text</type>
</CustomField>