force-app/main/default/objects/Test_Cycle__c/fields/Test_Pass__c.field-meta.xml
<CustomField>
    <fullName>Test_Pass__c</fullName>
    <label>Test Pass #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>