force-app/main/default/objects/Test_Cycle__c/fields/Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan__c</fullName>
    <label>Test Plan</label>
    <referenceTo>Test_Plan__c</referenceTo>
    <relationshipLabel>Test Cycles</relationshipLabel>
    <relationshipName>Test_Cycles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>