force-app/main/default/objects/Test_Cycle__c/fields/Total_Test_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Total_Test_Scenarios__c</fullName>
    <description>Roll-up summary of total child Test Scenario records</description>
    <inlineHelpText>Total number of Test Scenarios</inlineHelpText>
    <label>Total Test Scenarios</label>
    <summaryForeignKey>Test_Scenario__c.Test_Cycle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>