force-app/main/default/objects/Test_Cycle__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test Scenario Validation</fullName>
            </value>
            <value>
                <fullName>Developer Testing</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Smoke/sanity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>